--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,14 +1,13 @@
 .modal {
   position: absolute;
-  background-color: rgb(54, 54, 54);
-  top: 50%;
-  left: 30%;
-  padding: 20px;
-  transform: translate(-50%, -50%);
-  font-size: larger;
-  width: 22rem;
-  border-radius: 10px;
-  transition: all 300ms ease;
+  width: 100vw;
+  height: 100vh;
+  background: none;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+  border: none;
 
   button {
     position: absolute;
@@ -28,5 +27,34 @@
   span {
     font-weight: 700;
     font-size: larger;
+  }
+
+  .container {
+    position: absolute;
+    background-color: rgb(54, 54, 54);
+    top: 50%;
+    left: 50%;
+    padding: 20px;
+    transform: translate(-50%, -50%);
+    font-size: larger;
+    width: 22rem;
+    border-radius: 10px;
+    transition: all 300ms ease;
+    margin: 0;
+    z-index: 2;
+    border: 4px solid;
+  }
+
+  &::before {
+    position: fixed;
+    content: '';
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border: none;
   }
 }
